# smallstr

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: lib.rs  string.rs
